methods.flowerpot.FlowerPot.scala.error
Erreur de compilation :
FlowerPot:69: error: method dessineLigne0 has return statement; needs result type
  return (n+1)
  ^FlowerPot:38: error: method dessineLigne has return statement; needs result type
    case 2 => dessineLigne1(); return (n+1)
                               ^